--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,6 +1,3 @@
-# This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: CI
 
 on:
@@ -10,7 +7,7 @@ on:
     branches: [ gh_actions ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
